Setup tailwind css

--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   },
   "homepage": "https://github.com/taraksh01/MealMitra#readme",
   "devDependencies": {
-    "parcel": "^2.9.3"
+    "parcel": "^2.9.3",
+    "postcss": "^8.4.30",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.3.3"
   },
   "dependencies": {
     "react": "^18.2.0",
